# game-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  run.bat
inc/: VAO.h  VBO.h  shaderClass.h
res/shaders/: default.frag  default.vert
src/: main.cpp  shaderClass.cpp
